Applied possible Install fix to CMakeLists.txt. Re-organised command interface files ready (hopefully) for a big push on implementation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -515,9 +515,11 @@ if (BuildLV2Plugin)
 
 include(GNUInstallDirs)
 
-set(LV2_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/lv2 CACHE PATH "Specifies where the LV2 libraries should be installed")
-#set(LV2_INSTALL_DIR lib/lv2 CACHE PATH "Specifies where the LV2 libraries should be installed")
-
+if (EXISTS "/etc/debian_version")
+    set(LV2_INSTALL_DIR lib/lv2 CACHE PATH "Specifies where the LV2 libraries should be installed")
+else (EXISTS "/etc/debian_version")
+    set(LV2_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/lv2 CACHE PATH "Specifies where the LV2 libraries should be installed")
+endif (EXISTS "/etc/debian_version")
 pkg_check_modules(LV2 REQUIRED lv2>=1.0.0)
 if (LV2_FOUND)
     message (STATUS "Found lv2 package ${LV2_VERSION}")
