Ported pop suppression feature from Zyn 2.5.2 Changed default XML Zyn instrument compatibility version to 2.5 Bugfix. NRPN insert and system effect changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -337,6 +337,7 @@ add_definitions (-DNUM_INS_EFX=8)
 add_definitions (-DNUM_PART_EFX=3)
 add_definitions (-DNUM_KIT_ITEMS=16)
 add_definitions (-DVELOCITY_MAX_SCALE=8.0f)
+add_definitions (-DFADEIN_ADJUSTMENT_SCALE=20)
 add_definitions (-DMAX_EQ_BANDS=8) # MAX_EQ_BANDS must be less than 20")
 add_definitions (-DMAX_FILTER_STAGES=5)
 add_definitions (-DFF_MAX_VOWELS=6)
