Removed jack/alsa tests from CMakeLists.txt They are now redundant.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,8 +57,8 @@ else (HasJackSession)
     set (JackSessionSupport OFF)
 endif (HasJackSession)
 
-set (DefaultAudio jack CACHE STRING "Default audio driver - alsa or jack")
-set (DefaultMidi jack CACHE STRING "Default midi driver - alsa or jack")
+#set (DefaultAudio jack CACHE STRING "Default audio driver - alsa or jack")
+#set (DefaultMidi jack CACHE STRING "Default midi driver - alsa or jack")
 
 option (BuildForAMD_X86_64 "Build for AMD x86_64 system" OFF)
 option (BuildForCore2_X86_64 "Build for Intel Core2 x86_64 system" OFF)
@@ -370,25 +370,25 @@ add_definitions (-DFF_MAX_SEQUENCE=8)
 add_definitions (-DMAX_PHASER_STAGES=12)
 add_definitions (-DMAX_ALIENWAH_DELAY=100)
 
-if (${DefaultAudio} STREQUAL "jack")
-    message(STATUS "Default audio driver is Jack")
+#if (${DefaultAudio} STREQUAL "jack")
+#    message(STATUS "Default audio driver is Jack")
     add_definitions(-DDEFAULT_AUDIO=jack_audio)
-elseif (${DefaultAudio} STREQUAL "alsa")
-    message(STATUS "Default audio driver is Alsa")
-    add_definitions(-DDEFAULT_AUDIO=alsa_audio)
-else (${DefaultAudio} STREQUAL "alsa")
-    message(FATAL_ERROR "Invalid DefaultAudio selection: " ${DefaultAudio})
-endif (${DefaultAudio} STREQUAL "jack")
+#elseif (${DefaultAudio} STREQUAL "alsa")
+#    message(STATUS "Default audio driver is Alsa")
+#    add_definitions(-DDEFAULT_AUDIO=alsa_audio)
+#else (${DefaultAudio} STREQUAL "alsa")
+#    message(FATAL_ERROR "Invalid DefaultAudio selection: " ${DefaultAudio})
+#endif (${DefaultAudio} STREQUAL "jack")
 
-if (${DefaultMidi} STREQUAL "jack")
-    message(STATUS "Default midi driver is Jack")
+#if (${DefaultMidi} STREQUAL "jack")
+#    message(STATUS "Default midi driver is Jack")
     add_definitions(-DDEFAULT_MIDI=jack_midi)
-elseif (${DefaultMidi} STREQUAL "alsa")
-    message(STATUS "Default midi driver is Alsa")
-    add_definitions(-DDEFAULT_MIDI=alsa_midi)
-else (${DefaultMidi} STREQUAL "alsa")
-    message(FATAL_ERROR "Invalid DefaultMidi selection: " ${DefaultMidi})
-endif (${DefaultMidi} STREQUAL "jack")
+#elseif (${DefaultMidi} STREQUAL "alsa")
+#    message(STATUS "Default midi driver is Alsa")
+#    add_definitions(-DDEFAULT_MIDI=alsa_midi)
+#else (${DefaultMidi} STREQUAL "alsa")
+#    message(FATAL_ERROR "Invalid DefaultMidi selection: " ${DefaultMidi})
+#endif (${DefaultMidi} STREQUAL "jack")
 
 if (JackSessionSupport)
     message(STATUS "With jack session support")
