Bugfix: CMakeLists.txt now recognises both ncurses and ncursesw. Bugfix: Default presets were only being set if there were none in   the .config file, but not if there was no config file!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,13 +182,19 @@ mark_as_advanced (FLTK_DIR)
 mark_as_advanced (FLTK_FLUID_EXECUTABLE)
 mark_as_advanced (FLTK_MATH_LIBRARY)
 
+
 # libncurses
-pkg_check_modules (LIBNCURSES REQUIRED ncurses)
+pkg_check_modules (LIBNCURSES ncurses)
 if (LIBNCURSES_FOUND)
     message (STATUS "Found libncurses ${LIBNCURSES_VERSION}")
-else (LIBNCURSES_FOUND)
-    message (FATAL_ERROR "libncurses required but not found")
-endif (LIBNCURSES_FOUND)
+else ()
+    pkg_check_modules (LIBNCURSES REQUIRED ncursesw)
+    if (LIBNCURSES_FOUND)
+        message (STATUS "Found libncursesw ${LIBNCURSES_VERSION}")
+    else()
+        message (FATAL_ERROR "libncurses required but not found")
+    endif ()
+endif ()
 
 find_path(Readline_ROOT_DIR
     NAMES include/readline/readline.h
@@ -324,6 +330,7 @@ add_definitions (-DYOSHIMI="yoshimi")
 add_definitions (-DCOMMAND_SIZE=80)
 add_definitions (-DMAX_HISTORY=25)
 add_definitions (-DMAX_PRESETS=1000)
+add_definitions (-DMAX_PRESET_DIRS=128)
 add_definitions (-DMAX_BANK_ROOT_DIRS=128)
 add_definitions (-DMAX_BANKS_IN_ROOT=128)
 add_definitions (-DMAX_AD_HARMONICS=128)
