Fixed master and part key shift range limits to +-36 semitones. First-time startup now opens the virtual keyboard.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -345,6 +345,8 @@ add_definitions (-DNUM_MIDI_PARTS=64)
 add_definitions (-DNUM_MIDI_CHANNELS=16)
 add_definitions (-DMAX_ENVELOPE_POINTS=40)
 add_definitions (-DMIN_ENVELOPE_DB=-60)
+add_definitions (-DMAX_KEY_SHIFT=36)
+add_definitions (-DMIN_KEY_SHIFT=-36)
 
 add_definitions (-DPI=3.1415926536f)
 add_definitions (-DTWOPI=6.28318530718f)
