Identifed Resonance controls. Moved max resonance points definition to CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -347,6 +347,7 @@ add_definitions (-DNUM_MIDI_PARTS=64)
 add_definitions (-DNUM_MIDI_CHANNELS=16)
 add_definitions (-DMAX_ENVELOPE_POINTS=40)
 add_definitions (-DMIN_ENVELOPE_DB=-60)
+add_definitions (-DMAX_RESONANCE_POINTS=256)
 add_definitions (-DMAX_KEY_SHIFT=36)
 add_definitions (-DMIN_KEY_SHIFT=-36)
 
