Sliders & Roller using mouse wheel, early attempt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -302,6 +302,7 @@ set (FltkUI_names
     "EffUI"  "BankUI"  "PartUI"
     "MicrotonalUI"  "MasterUI" "MasterMiscUI"
     "ParametersUI" "ConsoleUI" "VectorUI"
+    "WidgetMWSliderUI" "WidgetMWRollerUI"
 )
 
 # workaround fltk_wrap_ui breakage
