Started midi learn. Basic entries in place but not active

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -288,6 +288,7 @@ set (Misc_sources
 set (Interface_Sources
     Interface/CmdInterface.cpp
     Interface/InterChange.cpp
+    Interface/MidiLearn.cpp
     UI/MiscGui.cpp
 )
 
